# scaleca

./: README.md  ca_display.py  ca_engine.py  ca_server.py  cadisplay.py  disp_client.py  index.html  params.json  simpleca.py  test-display.py  test_simple.py
docs/: architecture  conventions  protocol  todo.org  webca.html
scaleca/: ca_base.py  ca_display.py  ca_life.py  ca_master.py  ca_server.py  ca_static.py  disp_simple.py
scaleca/cas/: ca_base.py  ca_vote.py
scripts/: ca_server.py  disp_client.py  json_bridge.py  serve_ca.py
src/cpp/: .gitignore  CMakeLists.txt  Makefile  Makefile.base  cppca.cpp  cppca.h  cppserver.cpp  griddev.cpp  gridmanager.cpp  gridmanager.h  make_states.cpp  mpica.cc  parca.cpp  test_ca.cpp  time_ca.cpp
src/cpp/tests/: .gitignore  CMakeLists.txt  Makefile  gt.cpp  test_gridman.cpp
states/: glider.ca  pentomino.ca
tests/: test-display.py  test_ca_server.py  test_one.py  test_simple.py
